inspect.local.5807570169599415634/namespaces/sso-noprod/route.openshift.io/routes.yaml
---
apiVersion: route.openshift.io/v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/balance: source
      openshift.io/host.generated: "true"
    creationTimestamp: "2024-01-31T21:46:52Z"
    labels:
      app: keycloak
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:haproxy.router.openshift.io/balance: {}
          f:labels:
            .: {}
            f:app: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"3f95cbd7-aa83-4561-add8-26cba88d49b8"}: {}
        f:spec:
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: keycloak-operator
      operation: Update
      time: "2024-01-31T21:46:52Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      time: "2024-01-31T21:46:52Z"
    name: keycloak
    namespace: sso-noprod
    ownerReferences:
    - apiVersion: keycloak.org/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: Keycloak
      name: keycloak
      uid: 3f95cbd7-aa83-4561-add8-26cba88d49b8
    resourceVersion: "51040492"
    uid: 8e8bc579-6a5c-493f-b6c5-242161dec8d2
  spec:
    host: keycloak-sso-noprod.apps.gcp-ocp-noprod.losheroes.int
    port:
      targetPort: keycloak
    tls:
      termination: reencrypt
    to:
      kind: Service
      name: keycloak
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2024-01-31T21:46:52Z"
        status: "True"
        type: Admitted
      host: keycloak-sso-noprod.apps.gcp-ocp-noprod.losheroes.int
      routerCanonicalHostname: router-default.apps.gcp-ocp-noprod.losheroes.int
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/balance: source
      haproxy.router.openshift.io/rewrite-target: /auth/realms/master
    creationTimestamp: "2024-01-31T21:46:57Z"
    labels:
      app: keycloak
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:haproxy.router.openshift.io/balance: {}
            f:haproxy.router.openshift.io/rewrite-target: {}
          f:labels:
            .: {}
            f:app: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"3f95cbd7-aa83-4561-add8-26cba88d49b8"}: {}
        f:spec:
          f:host: {}
          f:path: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: keycloak-operator
      operation: Update
      time: "2024-01-31T21:46:57Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      time: "2024-01-31T21:46:57Z"
    name: keycloak-metrics-rewrite
    namespace: sso-noprod
    ownerReferences:
    - apiVersion: keycloak.org/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: Keycloak
      name: keycloak
      uid: 3f95cbd7-aa83-4561-add8-26cba88d49b8
    resourceVersion: "51040562"
    uid: fe213a62-83e9-4fe6-934b-9b4a2957574b
  spec:
    host: keycloak-sso-noprod.apps.gcp-ocp-noprod.losheroes.int
    path: /auth/realms/master/metrics
    port:
      targetPort: keycloak
    tls:
      termination: reencrypt
    to:
      kind: Service
      name: keycloak
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2024-01-31T21:46:57Z"
        status: "True"
        type: Admitted
      host: keycloak-sso-noprod.apps.gcp-ocp-noprod.losheroes.int
      routerCanonicalHostname: router-default.apps.gcp-ocp-noprod.losheroes.int
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
      argocd.argoproj.io/sync-wave: "3"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"route.openshift.io/v1","kind":"Route","metadata":{"annotations":{"argocd.argoproj.io/sync-options":"SkipDryRunOnMissingResource=true","argocd.argoproj.io/sync-wave":"3"},"labels":{"app":"keycloak","app.kubernetes.io/instance":"sso-gcp-ocp-noprod"},"name":"keycloak-public-tls","namespace":"sso-noprod"},"spec":{"host":"sso-gcp-noprod.cclh.io","port":{"targetPort":"keycloak"},"tls":{"caCertificate":"-----BEGIN CERTIFICATE-----\nMIIGEzCCA/ugAwIBAgIQfVtRJrR2uhHbdBYLvFMNpzANBgkq [...]
    creationTimestamp: "2024-01-31T21:46:05Z"
    labels:
      app: keycloak
      app.kubernetes.io/instance: sso-gcp-ocp-noprod
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:argocd.argoproj.io/sync-options: {}
            f:argocd.argoproj.io/sync-wave: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/instance: {}
        f:spec:
          f:host: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: argocd-controller
      operation: Update
      time: "2024-01-31T21:46:05Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:tls:
            f:caCertificate: {}
            f:certificate: {}
            f:key: {}
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      subresource: status
      time: "2024-01-31T21:46:05Z"
    name: keycloak-public-tls
    namespace: sso-noprod
    resourceVersion: "51039734"
    uid: 722ac905-bde4-4faa-8a4e-ce891fe76898
  spec:
    host: sso-gcp-noprod.cclh.io
    port:
      targetPort: keycloak
    tls:
      caCertificate: |-
        -----BEGIN CERTIFICATE-----
        MIIGEzCCA/ugAwIBAgIQfVtRJrR2uhHbdBYLvFMNpzANBgkqhkiG9w0BAQwFADCB
[...]
        00u/I5sUKUErmgQfky3xxzlIPK1aEn8=
        -----END CERTIFICATE-----
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIGIzCCBQugAwIBAgIQXO6ZPUzGHHwZ0lNNqd70AjANBgkqhkiG9w0BAQsFADCB
[...]
        ZiNtwoMTxmUoR3KQcuLST9AVwTIi0SkOVFHcpfXq6y5216DwCJjS
        -----END CERTIFICATE-----
      termination: reencrypt
    to:
      kind: Service
      name: keycloak
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2024-01-31T21:46:05Z"
        status: "True"
        type: Admitted
      host: sso-gcp-noprod.cclh.io
      routerCanonicalHostname: router-default.apps.gcp-ocp-noprod.losheroes.int
      routerName: default
      wildcardPolicy: None
kind: RouteList
metadata:
  resourceVersion: "152573824"
